[package]
name = "serde_builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.9", default-features = false }
ed25519-dalek = { version = "1.0", features = ["serde"] }
# All the ed25519 crates have a problem with old rand_core versions, and I would unfortunately have
# to fork a lot of stuff if I wanted to fix it myself
old_rand_core = { package = "rand_core", version = "0.5", default-features = false }
rand = "0.8"
rand_xoshiro = { version = "0.6", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
